# corroza

./: Cargo.toml  README.md
example/: fur_elise.txt  happy_birthday.txt  simple_scale.txt
scripts/: fm-synth.sh  generate_test_plots.sh  play.sh  plot.sh
src/: lib.rs  main.rs  wav.rs
src/generator/: adsr.rs  fm_synth.rs  mod.rs  ramp.rs
src/pipeline/: mod.rs  parser.rs  scheduler.rs  voicemgr.rs
