[package]
name = "corroza"
version = "0.1.0"
edition = "2021"

[dependencies]
plotters-svg = "0.3"
plotters = { version = "0.3", default-features = false, features = ["svg_backend", "line_series"] }

[[bin]]
name = "plot-adsr"
path = "src/bin/plot-adsr.rs"

[[bin]]
name = "fm-synth"
path = "src/bin/fm-synth.rs"

[[bin]]
name = "play"
path = "src/bin/play.rs"
